[package]
name = "p2p-tictactoe"
version = "0.1.0"
authors = ["FuseTim <fusetim@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
atomic = "0.5.0"
bytes = "1"
wasm-bindgen-futures = "^0.4.0"
futures = "0.3.1"
lazy_static = "1.2"
wasm-bindgen = "0.2.74"
console_error_panic_hook = { version = "0.1.6" }
js-sys = "0.3.51"
libp2p = "^0.38.0"
libp2p-relay = "^0.2.0"
libp2p-wasm-ext = { version = "^0.28.0", features = ["websocket"]}
multiaddr = { version = "0.12.0" }
anyhow = "^1.0.0"
[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
env_logger = "0.8.1"
tokio = { version = "1.0.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }

[workspace]
members = [
    "protocols/tictactoe",
    "clients/tictactoe-web"    
]