[package]
name = "tictactoe-web"
version = "0.1.0"
authors = ["FuseTim <fusetim@gmx.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.2"
once_cell = "1.8.0"
log = "^0.4.0"
anyhow = "^1.0.0"

multiaddr = { version = "0.12.0" }
libp2p = "^0.38.0"
libp2p-noise = "*"
libp2p-yamux = "*"
libp2p-ping = "*"
libp2p-relay = "^0.2.0"
libp2p-wasm-ext = { version = "^0.28.0", features = ["websocket"]}

wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "^0.4.0"
js-sys = "0.3.51"
console_log = "^0.2.0"
console_error_panic_hook = { version = "0.1.6" }

getrandom = { version = "0.2", features = ["js"] }
futures = { version = "0.3.4", features = ["compat"] }
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
rand6 = { package = "rand", version = "0.6", features = ["wasm-bindgen"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
futures-timer = { version = "3.0.1", features = ["wasm-bindgen"] }
chrono = { version = "0.4", features = ["wasmbind"] }
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]}